--- a/views/app.ejs
+++ b/views/app.ejs
@@ -8,6 +8,12 @@
 <style>
 .tableData,tr,th,td{
     border:1px solid black;
+    margin:auto;
+    /* padding:2%; */
+
+}
+tr{
+        padding:5%;
 
 }
 #FormContainer{
