--- a/views/app.ejs
+++ b/views/app.ejs
@@ -21,6 +21,7 @@ tr{
     padding:1%;
     margin-right:20%;
     margin-left:20%;
+    background-color: aqua;
     border-radius:3%;
     /* width:40%; */
 }
